--- a/src/Project/Agency/code/Views/Website/Layouts/Default.cshtml
+++ b/src/Project/Agency/code/Views/Website/Layouts/Default.cshtml
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,6 +10,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/agency.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -23,34 +23,31 @@
     <link href="css/agency.min.css" rel="stylesheet">
 </head>
 
-<body id="page-top">
+    <body id="page-top">
+        <!-- Navigation -->
+        @Html.Sitecore().Placeholder("navigation")
 
-<!-- Navigation -->
-@Html.Sitecore().Placeholder("navigation")
+        <!-- Header -->
+        @Html.Sitecore().Placeholder("header")
 
-<!-- Header -->
-@Html.Sitecore().Placeholder("header")
+        <!-- Services -->
+        @Html.Sitecore().Placeholder("content")
 
-<!-- Services -->
-@Html.Sitecore().Placeholder("content")
+        <!-- Footer -->
+        @Html.Sitecore().Placeholder("footer")
 
-<!-- Footer -->
-@Html.Sitecore().Placeholder("footer")
+        <!-- Bootstrap core JavaScript -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/bootstrap.bundle.min.js"></script>
 
-<!-- Bootstrap core JavaScript -->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <!-- Plugin JavaScript -->
+        <script src="assets/js/jquery.easing.min.js"></script>
 
-<!-- Plugin JavaScript -->
-<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+        <!-- Contact form JavaScript -->
+        <script src="assets/js/jqBootstrapValidation.js"></script>
+        <script src="assets/js/contact_me.js"></script>
 
-<!-- Contact form JavaScript -->
-<script src="js/jqBootstrapValidation.js"></script>
-<script src="js/contact_me.js"></script>
-
-<!-- Custom scripts for this template -->
-<script src="js/agency.min.js"></script>
-
-</body>
-
+        <!-- Custom scripts for this template -->
+        <script src="assets/js/agency.min.js"></script>
+    </body>
 </html>
