Add custom experience buttons paths to Serialization

--- a/src/Project/Agency/code/assets/css/agency.css
+++ b/src/Project/Agency/code/assets/css/agency.css
@@ -167,7 +167,7 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("../img/header-bg.jpg");
+  /* background-image: url("../img/header-bg.jpg");*/
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -691,4 +691,8 @@ ul.social-buttons li a {
 
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
   background-color: #fed136;
+}
+
+.scEmptyPlaceholder {
+    min-width: 100px;
 }
